public/style/style.css
* { margin: 0; }
html, body { height: 100%; }

#wrapper {
    min-height: 100%;
    margin: 0 auto -40px; /* the bottom margin is the negative value of the footer's height */
}

footer, .push {
    height: 30px; /* '.push' must be the same height as 'footer' */
}

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

.switch .slide-button,.toggle p span{display:none}@media only screen{.toggle{position:relative;padding:0;margin-left:100px}.toggle label{position:relative;z-index:3;display:block;width:100%}.toggle input{position:absolute;opacity:0;z-index:5}.toggle p{position:absolute;left:-100px;width:100%;margin:0;padding-right:100px;text-align:left}.toggle p span{position:absolute;top:0;left:0;z-index:5;display:block;width:50%;margin-left:100px;text-align:center}.toggle p span:last-child{left:50%}.toggle .slide-button{position:absolute;right:0;top:0;z-index:4;display:block;width:50%;height:100%;padding:0}.toggle,.switch{display:block;height:30px}.switch *,.toggle *{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-ms-box-sizing:border-box;-o-box-sizing:border-box;box-sizing:border-box}.switch .slide-button,.toggle .slide-button{display:block;-webkit-transition:all .3s ease-out;-moz-transition:all .3s ease-out;-ms-transition:all .3s ease-out;-o-transition:all .3s ease-out;transition:all .3s ease-out}.toggle label,.toggle p,.switch label{line-height:30px;vertical-align:middle}.toggle input:checked ~ .slide-button{right:50%}.toggle input:focus ~ .slide-button,.switch input:focus+label{outline:1px dotted #888}.switch,.toggle{-webkit-animation:bugfix infinite 1s}@-webkit-keyframes bugfix{from{position:relative}to{position:relative}}.candy{background-color:#2d3035;color:#fff;font-weight:bold;text-align:center;text-shadow:1px 1px 1px #191b1e;border-radius:3px;box-shadow:inset 0 2px 6px rgba(0,0,0,0.3),0 1px 0 rgba(255,255,255,0.2)}.candy input:checked+label{color:#333;text-shadow:0 1px 0 rgba(255,255,255,0.5)}.candy .slide-button{border:1px solid #333;background-color:#70c66b;background-image:-webkit-linear-gradient(top,rgba(255,255,255,0.2),rgba(0,0,0,0));background-image:-moz-linear-gradient(top,rgba(255,255,255,0.2),rgba(0,0,0,0));background-image:-ms-linear-gradient(top,rgba(255,255,255,0.2),rgba(0,0,0,0));background-image:-o-linear-gradient(top,rgba(255,255,255,0.2),rgba(0,0,0,0));background-image:linear-gradient(top,rgba(255,255,255,0.2),rgba(0,0,0,0));box-shadow:0 1px 1px rgba(0,0,0,0.2),inset 0 1px 1px rgba(255,255,255,0.45);border-radius:3px}.candy p{color:#333;text-shadow:none}.candy span{color:#fff}.candy.blue .slide-button{background-color:#38a3d4}.candy.yellow .slide-button{background-color:#f5e560}}

body {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 13px;
    line-height: 18px;
    color: #333333;
}

article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
    display: block;
}

ol, ul {
    list-style: none;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

.content {
    width: 960px;
    margin: 0 auto;
    position: relative;
}

header {
    height: 36px;
    background-color: #eeeeee;
    background-repeat: repeat-x;
    background-image: -moz-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%);
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f5f5f5), color-stop(100%,#eeeeee));
    background-image: -webkit-linear-gradient(top, #f5f5f5 0%,#eeeeee 100%);
    background-image: -ms-linear-gradient(top, #f5f5f5 0%,#eeeeee 100%);
    background-image: -o-linear-gradient(top, #f5f5f5 0%,#eeeeee 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#eeeeee',GradientType=0 );
    background-image: linear-gradient(top, #f5f5f5 0%,#eeeeee 100%);
    border: 1px solid #e5e5e5;
}

header h1 {
    font-weight: bold;
    font-size: 20px;
    position: absolute;
    top: 9px;
}

header h1 a {
    color: #333333;
    text-decoration: none;
}

header nav ul {
    position: absolute;
    right: 0;
    margin: 0;
    padding: 0;
}

header nav ul li {
    margin: 0;
    padding: 0;
    border-left: 1px solid #f5f5f5;
    border-right: 1px solid #e5e5e5;
    float: left;
}

header nav ul li:hover, header nav ul li.active {
    background-color: #eeeeee;
}

header nav ul li a {
    text-decoration: none;
    color: #0088cc;
    line-height: 36px;
    display: block;
    padding: 0 15px;
}

footer ul {
    width: 960px;
    margin: 0 auto;
    border-top: 1px solid #eeeeee;
    margin-top: 10px;
    text-align: center;
}

footer ul li {
    display: inline;
}

footer ul li a {
    color: #333333;
}

footer ul li a:hover {
    text-decoration: none;
}

#body {
    width: 960px;
    margin: 0 auto;
    overflow: hidden;
    padding-top: 10px;
}

article {
    position: relative;
}

article.cols-3.first {
    margin-left: 0;
}

article.cols-3 {
    width: 310px;
    margin-left: 15px;
    float: left;
}

article h2 {
    font-size: 14px;
    font-weight: bold;
    color: #fff;
    text-shadow: 0 -1px 0 rgba(0,0,0,0.5);
    line-height: 1.4;
    position: relative;
    padding: 5px 20px;
    margin: 0;
    color: #fff;
    text-shadow: 0 -1px 0 rgba(0,0,0,0.5);
    background-color: #6c8393;
    background-image: -moz-linear-gradient(#7f95a5, #6c8393);
    background-image: -webkit-linear-gradient(#7f95a5, #6c8393);
    background-image: linear-gradient(#7f95a5, #6c8393);
    background-repeat: repeat-x;
    border: 1px solid #6e8290;
    border-bottom-color: #586873;
    border-radius: 4px 4px 0 0;
}

article.error h2 {
    background-color: #992b2b;
    background-image: -moz-linear-gradient(#a92a42, #992b2b);
    background-image: -webkit-linear-gradient(#a92a42, #992b2b);
    background-image: linear-gradient(#a92a42, #992b2b);
}

article.error p {
    padding: 2px 20px;
}

article h2 form {
    display: inline;
    position: absolute;
    right: 0;
    top: 1px;
}

article .confirmation {
    background: white;
    top: 31px;
    position: absolute;
    left: 1px;
    width: 308px;
    height: 89px;
    text-align: center;
}

article .confirmation p {
    margin: 20px;
    text-align: center;
}

article table, article canvas, article.error {
    padding: 20px;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    font-size: 14px;
    background-color: #fff;
    border: 1px solid #d8dee2;
    border-top-color: white;
    border-radius: 0 0 4px 4px;
    width: 100%;
    margin-bottom: 20px;
}

article.error {
    padding: 0;
    border-radius: 4px;
}

article tr.script {
    display: none;
}

article tr.script.active {
    display: table-row;
}

article th {
    text-align: left;
    padding: 2px 20px;
    white-space: nowrap;
}

article th.full_path {
    font-weight: bold;
}

article th.hits, article th.memory_consumption, article th.last_used_timestamp, article th.last_used_timestamp, article th.timestamp {
    padding-left: 0;
    font-weight: bold;
}

article td.directory {
    padding: 0 20px;
    cursor: pointer;
}

article td.directory img {
    position: relative;
    top: 3px;
}

article td.full_path {
    padding-left: 20px;
}

article td.invalidate {
    text-align: center;
    vertical-align: middle;
}

article .invalidate {
    width: 20px;
}

article td.empty {
    text-align: center;
}

article .odd {
    background: #eeeeee;
}

article ul {
    border-right: 1px solid #d8dee2;
    border-bottom: 1px solid #d8dee2;
    display: inline;
    position: absolute;
    border-bottom-right-radius: 5px;
    padding: 5px 5px 5px 20px;
    background: white;
}

article .graph-legend {
    width: 10px;
    height: 10px;
    border: 1px solid #d8dee2;
    border-radius: 3px;
    display: inline-block;
}

article .graph-legend.red {
    background: #e0642e;
}

article .graph-legend.green {
    background: #bce02e;
}

article .graph-legend.blue {
    background: #2e97e0;
}

